WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
90152
[BlackBerry] Checkerboard shown when clicking on error page buttons
https://bugs.webkit.org/show_bug.cgi?id=90152
Summary
[BlackBerry] Checkerboard shown when clicking on error page buttons
Leo Yang
Reported
2012-06-28 03:32:58 PDT
RIM PR# 161867 Open the browser and open a page with WIFI turned off. Press Try Again on the error page. Checkerboard flashes.
Attachments
Patch
(2.09 KB, patch)
2012-06-28 18:44 PDT
,
Leo Yang
no flags
Details
Formatted Diff
Diff
Patch - reworked
(4.00 KB, patch)
2012-07-03 19:14 PDT
,
Leo Yang
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Leo Yang
Comment 1
2012-06-28 18:44:02 PDT
Created
attachment 150062
[details]
Patch
Leo Yang
Comment 2
2012-06-28 18:44:51 PDT
Comment on
attachment 150062
[details]
Patch Sending to cq.
WebKit Review Bot
Comment 3
2012-06-28 19:52:22 PDT
Comment on
attachment 150062
[details]
Patch Clearing flags on attachment: 150062 Committed
r121514
: <
http://trac.webkit.org/changeset/121514
>
WebKit Review Bot
Comment 4
2012-06-28 19:52:27 PDT
All reviewed patches have been landed. Closing bug.
Leo Yang
Comment 5
2012-07-03 19:13:58 PDT
The previous patch can avoid the race condition completely. Another fix is coming soon.
Leo Yang
Comment 6
2012-07-03 19:14:42 PDT
Created
attachment 150708
[details]
Patch - reworked
WebKit Review Bot
Comment 7
2012-07-03 19:59:47 PDT
Comment on
attachment 150708
[details]
Patch - reworked Clearing flags on attachment: 150708 Committed
r121824
: <
http://trac.webkit.org/changeset/121824
>
WebKit Review Bot
Comment 8
2012-07-03 19:59:51 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug