[BlackBerry] Checkerboard shown when clicking on error page buttons https://bugs.webkit.org/show_bug.cgi?id=90152 RIM PR #161867

Reviewed by George Staikos.

Reset m_hasBlitJobs when resetting tiles to prevent ui thread from drawing checkerboard unintentionally.

* Api/BackingStore.cpp:
(BlackBerry::WebKit::BackingStorePrivate::resetTiles):


Canonical link: https://commits.webkit.org/108081@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@121514 268f45cc-cd09-0410-ab3c-d52691b4dbfc